# Documentator-MCP

./: README.md  main.py  pyproject.toml
doc/: DOC.md  communication_diagram.mmd  project_diagram.mmd
